force-app/main/default/objects/PF_Log_Event__e/PF_Log_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event mapping for Prompt Factory logging to bypass DML before callout restrictions</description>
    <label>Prompt Factory Log Event</label>
    <pluralLabel>Prompt Factory Log Events</pluralLabel>
</CustomObject>