force-app/main/default/objects/PF_Log_Event__e/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>