force-app/main/default/objects/PF_Log_Event__e/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <description>ID of the associated PF_Run__c record</description>
    <label>Run Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>