force-app/main/default/objects/PF_Log_Event__e/fields/Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Stage_Number__c</fullName>
    <label>Stage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>